provide LovelyZeeiam with more operations